fix: extra spacing when no icons in icon-area

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -164,6 +164,9 @@ body.linux #menu-button {
   gap: 0.5rem;
   order: 1;
 }
+.tab-item .tab-icon-area:has(i:only-child) {
+  margin-left: -0.5rem;
+}
 .tab-item .tab-icon {
   position: relative;
   font-size: 0.875em;
